2014-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/FAQ.rst: Add a FAQ entry regarding what 'identify' reports.
	Resolves SF issue #280 "Better documentation for spurious gm
	identify in Q8 compilation."

2014-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (ModulateImage): ModulateImage() should produce
	a progress indication even if only the colormap is modified.

2014-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Patch by Cédric Demière to fix
	"Memory allocation failed" error when reading PSDs files which
	have no layers.  Delivered via SF patch #41 "PSD : files without
	layers".  Resolves SF bug #242 "Can not convert PSD to JPG or PNG
	(gm convert: Memory allocation failed)".

2014-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (WriteWEBPImage): WebP fix by Roman Hiestand to
	make WebP lossless format truely lossless.

	* tests/rwblob.tap (check_types): Added a test for WebP lossless.

	* tests/rwfile.tap: Added a test for WebP lossless.

	* tests/rwblob.c: Added support for -define.

	* tests/rwfile.c: Added support for -define.

2014-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp, VisualMagick/webp: Updated bundled WebP to 0.4.2 release.

2014-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/tests/attributes.cpp: Add a simple test for
	Image::formatExpression().

	* Magick++/lib/Image.cpp (formatExpression): Handle case where
	TranslateText() returns NULL.  Problem was reported by Dirk
	Lemstra..

2014-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (formatExpression): New method to format
	a string based on a format similar to command-line -format.
	Feature was requested by Dirk Lemstra.

	* magick/blob.c (BlobReserveSize): Don't throw an exception if
	posix_fallocate() fails since it seems that it is not supported